--- a/.doc_gen/metadata/route53domains_metadata.yaml
+++ b/.doc_gen/metadata/route53domains_metadata.yaml
@@ -1,5 +1,4 @@
-# zexi 0.4.3
-route-53_Hello:
+route-53-domains_Hello:
   title: Hello &R53DR;
   title_abbrev: Hello &R53DR;
   synopsis: get started using &R53DR;.
@@ -34,11 +33,7 @@ route-53_Hello:
                 - Route53.dotnetv3.HelloRoute53
   services:
     route-53-domains: {ListPrices}
-route-53_CheckDomainAvailability:
-  title: Check the availability of a domain using an &AWS; SDK
-  title_abbrev: Check domain availability
-  synopsis: check the availability of a domain.
-  category:
+route-53-domains_CheckDomainAvailability:
   languages:
     Kotlin:
       versions:
@@ -69,11 +64,7 @@ route-53_CheckDomainAvailability:
                 - Route53.dotnetv3.CheckDomainAvailability
   services:
     route-53-domains: {CheckDomainAvailability}
-route-53_CheckDomainTransferability:
-  title: Check the transferability of a domain using an &AWS; SDK
-  title_abbrev: Check domain transferability
-  synopsis: check the transferability of a domain.
-  category:
+route-53-domains_CheckDomainTransferability:
   languages:
     Kotlin:
       versions:
@@ -104,11 +95,7 @@ route-53_CheckDomainTransferability:
                 - Route53.dotnetv3.CheckDomainTransferability
   services:
     route-53-domains: {CheckDomainTransferability}
-route-53_GetDomainDetails:
-  title: Get &R53DR; domain details using an &AWS; SDK
-  title_abbrev: Get domain details
-  synopsis: get the details for a domain.
-  category:
+route-53-domains_GetDomainDetail:
   languages:
     Kotlin:
       versions:
@@ -139,11 +126,7 @@ route-53_GetDomainDetails:
                 - Route53.dotnetv3.GetDomainDetail
   services:
     route-53-domains: {GetDomainDetail}
-route-53_GetDomainSuggestions:
-  title: Get &R53DR; domain name suggestions using an &AWS; SDK
-  title_abbrev: Get suggested domain names
-  synopsis: get domain name suggestions.
-  category:
+route-53-domains_GetDomainSuggestions:
   languages:
     Kotlin:
       versions:
@@ -174,11 +157,7 @@ route-53_GetDomainSuggestions:
                 - Route53.dotnetv3.GetDomainSuggestions
   services:
     route-53-domains: {GetDomainSuggestions}
-route-53_GetOperationDetails:
-  title: Get details on a &R53DR; operation using an &AWS; SDK
-  title_abbrev: Get operation details
-  synopsis: get details on an operation.
-  category:
+route-53-domains_GetOperationDetail:
   languages:
     Kotlin:
       versions:
@@ -209,11 +188,7 @@ route-53_GetOperationDetails:
                 - Route53.dotnetv3.GetOperationDetail
   services:
     route-53-domains: {GetOperationDetail}
-route-53_ListPrices:
-  title: List &R53DR; domain prices using an &AWS; SDK
-  title_abbrev: List domain prices
-  synopsis: list domain prices.
-  category:
+route-53-domains_ListPrices:
   languages:
     Kotlin:
       versions:
@@ -244,11 +219,7 @@ route-53_ListPrices:
                 - Route53.dotnetv3.ListPrices
   services:
     route-53-domains: {ListPrices}
-route-53_ListDomains:
-  title: List &R53DR; registered domains using an &AWS; SDK
-  title_abbrev: List domains
-  synopsis: list the registered domains.
-  category:
+route-53-domains_ListDomains:
   languages:
     Kotlin:
       versions:
@@ -279,11 +250,7 @@ route-53_ListDomains:
                 - Route53.dotnetv3.ListDomains
   services:
     route-53-domains: {ListDomains}
-route-53_ListOperations:
-  title: List &R53DR; operations using an &AWS; SDK
-  title_abbrev: List operations
-  synopsis: list operations.
-  category:
+route-53-domains_ListOperations:
   languages:
     Kotlin:
       versions:
@@ -314,11 +281,7 @@ route-53_ListOperations:
                 - Route53.dotnetv3.ListOperations
   services:
     route-53-domains: {ListOperations}
-route-53_RegisterDomain:
-  title: Register a domain with &R53DR; using an &AWS; SDK
-  title_abbrev: Register a domain
-  synopsis: register a domain.
-  category:
+route-53-domains_RegisterDomain:
   languages:
     Kotlin:
       versions:
@@ -349,11 +312,7 @@ route-53_RegisterDomain:
                 - Route53.dotnetv3.RegisterDomain
   services:
     route-53-domains: {RegisterDomain}
-route-53_ViewBilling:
-  title: View &R53DR; billing records using an &AWS; SDK
-  title_abbrev: View billing
-  synopsis: view billing records.
-  category:
+route-53-domains_ViewBilling:
   languages:
     Kotlin:
       versions:
@@ -384,7 +343,7 @@ route-53_ViewBilling:
                 - Route53.dotnetv3.ViewBilling
   services:
     route-53-domains: {ViewBilling}
-route-53_Scenario_GetStartedRoute53Domains:
+route-53-domains_Scenario_GetStartedRoute53Domains:
   title: Get started with &R53DR; using an &AWS; SDK
   title_abbrev: Get started with domains
   synopsis_list:
@@ -428,6 +387,5 @@ route-53_Scenario_GetStartedRoute53Domains:
               snippet_tags:
                 - Route53.dotnetv3.Route53Wrapper
   services:
-    route-53-domains: {CheckDomainAvailability, CheckDomainTransferability, GetDomainDetail, GetDomainSuggestions,
-                       GetOperationDetail, ListPrices, ListDomains, ListOperations,
-                       RegisterDomain, ViewBilling}
+    route-53-domains: {CheckDomainAvailability, CheckDomainTransferability, GetDomainDetail, GetDomainSuggestions, GetOperationDetail,
+                       ListPrices, ListDomains, ListOperations, RegisterDomain, ViewBilling}
