--- a/.doc_gen/metadata/acm_metadata.yaml
+++ b/.doc_gen/metadata/acm_metadata.yaml
@@ -1,9 +1,5 @@
 # zexi 0.4.0
 acm_DescribeCertificate:
-  title: Describe an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Describe a certificate
-  synopsis: describe &ACM; certificates.
-  category:
   languages:
     .NET:
       versions:
@@ -34,10 +30,6 @@ acm_DescribeCertificate:
   services:
     acm: {DescribeCertificate}
 acm_GetCertificate:
-  title: Get an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Get a certificate
-  synopsis: get &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -59,10 +51,6 @@ acm_GetCertificate:
   services:
     acm: {GetCertificate}
 acm_ListCertificates:
-  title: List &ACM; certificates using an &AWS; SDK
-  title_abbrev: List certificates
-  synopsis: list &ACM; certificates.
-  category:
   languages:
     .NET:
       versions:
@@ -93,10 +81,6 @@ acm_ListCertificates:
   services:
     acm: {ListCertificates}
 acm_ImportCertificate:
-  title: Import an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Import certificates
-  synopsis: import &ACM; certficates.
-  category:
   languages:
     Python:
       versions:
@@ -118,10 +102,6 @@ acm_ImportCertificate:
   services:
     acm: {ImportCertificate}
 acm_DeleteCertificate:
-  title: Delete an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Delete a certificate
-  synopsis: delete &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -143,10 +123,6 @@ acm_DeleteCertificate:
   services:
     acm: {DeleteCertificate}
 acm_AddTagsToCertificate:
-  title: Add tags to an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Add tags to a certificate
-  synopsis: add tags to &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -168,10 +144,6 @@ acm_AddTagsToCertificate:
   services:
     acm: {AddTagsToCertificate}
 acm_ExportCertificate:
-  title: Export an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Export a certificate
-  synopsis: Export an &ACM; certificate.
-  category:
   languages:
     C++:
       versions:
@@ -184,10 +156,6 @@ acm_ExportCertificate:
   services:
     acm: {ExportCertificate}
 acm_ListTagsForCertificate:
-  title: List tags for an &ACM; certificate using an &AWS; SDK
-  title_abbrev: List tags for a certificate
-  synopsis: list tags for &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -209,10 +177,6 @@ acm_ListTagsForCertificate:
   services:
     acm: {ListTagsForCertificate}
 acm_RemoveTagsFromCertificate:
-  title: Remove tags from an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Remove tags from a certificate
-  synopsis: remove tags from &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -234,10 +198,6 @@ acm_RemoveTagsFromCertificate:
   services:
     acm: {RemoveTagsFromCertificate}
 acm_RequestCertificate:
-  title: Request validation of an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Request validation of a certificate
-  synopsis: request validation of &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -259,10 +219,6 @@ acm_RequestCertificate:
   services:
     acm: {RequestCertificate}
 acm_ResendValidationEmail:
-  title: Resend validation email for an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Resend validation email for a certificate
-  synopsis: resend validation email for &ACM; certificates.
-  category:
   languages:
     Python:
       versions:
@@ -284,10 +240,6 @@ acm_ResendValidationEmail:
   services:
     acm: {ResendValidationEmail}
 acm_RenewCertificate:
-  title: Renew an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Renew a certificate
-  synopsis: renew an &ACM; certificate.
-  category:
   languages:
     C++:
       versions:
@@ -300,10 +252,6 @@ acm_RenewCertificate:
   services:
     acm: {RenewCertificate}
 acm_UpdateCertificateOptions:
-  title: Update an &ACM; certificate using an &AWS; SDK
-  title_abbrev: Update a certificate
-  synopsis: update an &ACM; certificate.
-  category:
   languages:
     C++:
       versions:
@@ -348,6 +296,5 @@ acm_Usage_ImportListRemove:
               snippet_tags:
                 - python.example_code.acm.Usage_ImportListRemove
   services:
-    acm: {AddTagsToCertificate, DeleteCertificate, DescribeCertificate, GetCertificate,
-          ImportCertificate, ListCertificates, ListTagsForCertificate, RemoveTagsFromCertificate,
-          RequestCertificate, ResendValidationEmail}
+    acm: {AddTagsToCertificate, DeleteCertificate, DescribeCertificate, GetCertificate, ImportCertificate, ListCertificates,
+          ListTagsForCertificate, RemoveTagsFromCertificate, RequestCertificate, ResendValidationEmail}
