--- a/.doc_gen/metadata/auto-scaling_metadata.yaml
+++ b/.doc_gen/metadata/auto-scaling_metadata.yaml
@@ -60,10 +60,6 @@ auto-scaling_Hello:
   services:
     auto-scaling: {DescribeAutoScalingGroups}
 auto-scaling_CreateAutoScalingGroup:
-  title: Create an &AS; group using an &AWS; SDK
-  title_abbrev: Create a group
-  synopsis: create an &AS; group.
-  category:
   languages:
     .NET:
       versions:
@@ -128,17 +124,14 @@ auto-scaling_CreateAutoScalingGroup:
   services:
     auto-scaling: {CreateAutoScalingGroup}
 auto-scaling_DeleteAutoScalingGroup:
-  title: Delete an &AS; group using an &AWS; SDK
-  title_abbrev: Delete a group
-  synopsis: delete an &AS; group.
-  category:
   languages:
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/cross-service/ResilientService/AutoScalerActions
           excerpts:
-            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group, and delete the group.
+            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group,
+                and delete the group.
               snippet_tags:
                 - ResilientService.dotnetv3.AutoScaling.DeleteAutoScalingGroup
             - description:
@@ -173,7 +166,8 @@ auto-scaling_DeleteAutoScalingGroup:
         - sdk_version: 3
           github: python/example_code/auto-scaling
           excerpts:
-            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group, and delete the group.
+            - description: Update the minimum size of an Auto Scaling group to zero, terminate all instances in the group,
+                and delete the group.
               snippet_tags:
                 - python.cross_service.resilient_service.AutoScaler.decl
                 - python.cross_service.resilient_service.auto-scaling.DeleteAutoScalingGroup
@@ -198,10 +192,6 @@ auto-scaling_DeleteAutoScalingGroup:
   services:
     auto-scaling: {DeleteAutoScalingGroup}
 auto-scaling_DescribeAutoScalingGroups:
-  title: Get information about &AS; groups using an &AWS; SDK
-  title_abbrev: Get information about groups
-  synopsis: get information about &AS; groups.
-  category:
   languages:
     .NET:
       versions:
@@ -265,10 +255,6 @@ auto-scaling_DescribeAutoScalingGroups:
   services:
     auto-scaling: {DescribeAutoScalingGroups}
 auto-scaling_UpdateAutoScalingGroup:
-  title: Update an &AS; group using an &AWS; SDK
-  title_abbrev: Update a group
-  synopsis: update the configuration for an &AS; group.
-  category:
   languages:
     Kotlin:
       versions:
@@ -333,10 +319,6 @@ auto-scaling_UpdateAutoScalingGroup:
   services:
     auto-scaling: {UpdateAutoScalingGroup}
 auto-scaling_TerminateInstanceInAutoScalingGroup:
-  title: Terminate an instance in an &AS; group using an &AWS; SDK
-  title_abbrev: Terminate an instance in a group
-  synopsis: terminate an instance in an &AS; group.
-  category:
   languages:
     Kotlin:
       versions:
@@ -404,10 +386,6 @@ auto-scaling_TerminateInstanceInAutoScalingGroup:
   services:
     auto-scaling: {TerminateInstanceInAutoScalingGroup}
 auto-scaling_SetDesiredCapacity:
-  title: Set the desired capacity of an &AS; group using an &AWS; SDK
-  title_abbrev: Set the desired capacity of a group
-  synopsis: set the desired capacity of an &AS; group.
-  category:
   languages:
     Kotlin:
       versions:
@@ -474,10 +452,6 @@ auto-scaling_SetDesiredCapacity:
   services:
     auto-scaling: {SetDesiredCapacity}
 auto-scaling_DescribeAutoScalingInstances:
-  title: Get information about &AS; instances using an &AWS; SDK
-  title_abbrev: Get information about instances
-  synopsis: get information about &AS; instances.
-  category:
   languages:
     Kotlin:
       versions:
@@ -544,10 +518,6 @@ auto-scaling_DescribeAutoScalingInstances:
   services:
     auto-scaling: {DescribeAutoScalingInstances}
 auto-scaling_DescribeScalingActivities:
-  title: Get information about &AS; activities using an &AWS; SDK
-  title_abbrev: Get information about scaling activities
-  synopsis: get information about &AS; activities.
-  category:
   languages:
     Kotlin:
       versions:
@@ -614,10 +584,6 @@ auto-scaling_DescribeScalingActivities:
   services:
     auto-scaling: {DescribeScalingActivities}
 auto-scaling_EnableMetricsCollection:
-  title: Enable &CW; metrics collection for an &AS; group using an &AWS; SDK
-  title_abbrev: Enable metrics collection for a group
-  synopsis: enable &CW; metrics collection for an &AS; group.
-  category:
   languages:
     Kotlin:
       versions:
@@ -684,10 +650,6 @@ auto-scaling_EnableMetricsCollection:
   services:
     auto-scaling: {EnableMetricsCollection}
 auto-scaling_DisableMetricsCollection:
-  title: Disable &CW; metrics collection for an &AS; group using an &AWS; SDK
-  title_abbrev: Disable metrics collection for a group
-  synopsis: disable &CW; metrics collection for an &AS; group.
-  category:
   languages:
     Kotlin:
       versions:
@@ -754,10 +716,6 @@ auto-scaling_DisableMetricsCollection:
   services:
     auto-scaling: {DisableMetricsCollection}
 auto-scaling_AttachLoadBalancerTargetGroups:
-  title: Attach an ELB target group to an &AS; group using an &AWS; SDK
-  title_abbrev: Attach an ELB target group to an Auto Scaling group
-  synopsis: attach an ELB target group to an &AS; group.
-  category:
   languages:
     .NET:
       versions:
@@ -793,13 +751,11 @@ auto-scaling_Scenario_GroupsAndInstances:
   title: Manage &AS; groups and instances using an &AWS; SDK
   title_abbrev: Manage groups and instances
   synopsis_list:
-    - Create an &ASlong; group with a launch template and Availability
-      Zones, and get information about running instances.
+    - Create an &ASlong; group with a launch template and Availability Zones, and get information about running instances.
     - Enable &CWlong; metrics collection.
     - Update the group's desired capacity and wait for an instance to start.
     - Terminate an instance in the group.
-    - List scaling activities that occur in response to user requests and capacity
-      changes.
+    - List scaling activities that occur in response to user requests and capacity changes.
     - Get statistics for &CW; metrics, then clean up resources.
   category: Scenarios
   languages:
@@ -814,9 +770,8 @@ auto-scaling_Scenario_GroupsAndInstances:
                 - AutoScaling.dotnetv3.AutoScalingBasics.Usings
                 - AutoScaling.dotnetv3.AutoScalingBasics
                 - AutoScaling.dotnetv3.AutoScalingBasics.UIWrapper
-            - description: Define functions that are called by the scenario to
-                manage launch templates and metrics. These functions wrap &AS;,
-                &EC2;, and &CW; actions.
+            - description: Define functions that are called by the scenario to manage launch templates and metrics. These
+                functions wrap &AS;, &EC2;, and &CW; actions.
               snippet_tags:
                 - AutoScaling.dotnetv3.AutoScalingActions.AutoScalingWrapper
                 - AutoScaling.dotnetv3.AutoScalingActions.EC2Wrapper
@@ -856,9 +811,8 @@ auto-scaling_Scenario_GroupsAndInstances:
             - description: Run an interactive scenario at a command prompt.
               snippet_tags:
                 - python.example_code.auto-scaling.Scenario_GroupsAndInstances
-            - description: Define functions that are called by the scenario to
-                manage launch templates and metrics. These functions wrap
-                &EC2; and &CW; actions.
+            - description: Define functions that are called by the scenario to manage launch templates and metrics. These
+                functions wrap &EC2; and &CW; actions.
               snippet_tags:
                 - python.example_code.auto-scaling.helper.ServiceHelper
     C++:
@@ -881,16 +835,5 @@ auto-scaling_Scenario_GroupsAndInstances:
                 - rustv1/examples/auto-scaling/src/lib.rs
                 - rustv1/examples/auto-scaling/src/scenario.rs
   services:
-    auto-scaling:
-      {
-        CreateAutoScalingGroup,
-        DeleteAutoScalingGroup,
-        DisableMetricsCollection,
-        EnableMetricsCollection,
-        DescribeAutoScalingGroups,
-        DescribeAutoScalingInstances,
-        DescribeScalingActivities,
-        SetDesiredCapacity,
-        TerminateInstanceInAutoScalingGroup,
-        UpdateAutoScalingGroup,
-      }
+    auto-scaling: {CreateAutoScalingGroup, DeleteAutoScalingGroup, DisableMetricsCollection, EnableMetricsCollection, DescribeAutoScalingGroups,
+                   DescribeAutoScalingInstances, DescribeScalingActivities, SetDesiredCapacity, TerminateInstanceInAutoScalingGroup, UpdateAutoScalingGroup}
