--- a/.doc_gen/metadata/kinesis_metadata.yaml
+++ b/.doc_gen/metadata/kinesis_metadata.yaml
@@ -1,9 +1,4 @@
-# zexi 0.4.0
 kinesis_CreateStream:
-  title: Create a &AK; stream using an &AWS; SDK
-  title_abbrev: Create a stream
-  synopsis: create a &AK; stream.
-  category:
   languages:
     .NET:
       versions:
@@ -51,11 +46,7 @@ kinesis_CreateStream:
                 - kns.abapv1.create_stream
   services:
     kinesis: {CreateStream}
-kinesis_DeregisterConsumer:
-  title: Deregister a consumer from a &AK; stream using an &AWS; SDK
-  title_abbrev: Deregister a consumer
-  synopsis: deregister a consumer from a &AK; stream.
-  category:
+kinesis_DeregisterStreamConsumer:
   languages:
     .NET:
       versions:
@@ -69,10 +60,6 @@ kinesis_DeregisterConsumer:
   services:
     kinesis: {DeregisterStreamConsumer}
 kinesis_DescribeStream:
-  title: Describe a &AK; stream using an &AWS; SDK
-  title_abbrev: Describe a stream
-  synopsis: describe a &AK; stream.
-  category:
   languages:
     Python:
       versions:
@@ -102,11 +89,7 @@ kinesis_DescribeStream:
                 - kns.abapv1.describe_stream
   services:
     kinesis: {DescribeStream}
-kinesis_ListConsumers:
-  title: List the consumers of a &AK; stream using an &AWS; SDK
-  title_abbrev: List the consumers of a stream
-  synopsis: list the consumers of a &AK; stream.
-  category:
+kinesis_ListStreamConsumers:
   languages:
     .NET:
       versions:
@@ -120,10 +103,6 @@ kinesis_ListConsumers:
   services:
     kinesis: {ListStreamConsumers}
 kinesis_ListStreams:
-  title: List &AK; streams using an &AWS; SDK
-  title_abbrev: List streams
-  synopsis: list information about one or more &AK; streams.
-  category:
   languages:
     .NET:
       versions:
@@ -152,11 +131,7 @@ kinesis_ListStreams:
                 - kns.abapv1.list_streams
   services:
     kinesis: {ListStreams}
-kinesis_ListTags:
-  title: List the tags associated with a &AK; stream using an &AWS; SDK
-  title_abbrev: List tags
-  synopsis: list the tags associated with a &AK; stream.
-  category:
+kinesis_ListTagsForStream:
   languages:
     .NET:
       versions:
@@ -170,10 +145,6 @@ kinesis_ListTags:
   services:
     kinesis: {ListTagsForStream}
 kinesis_DeleteStream:
-  title: Delete a &AK; stream using an &AWS; SDK
-  title_abbrev: Delete a stream
-  synopsis: delete a &AK; stream.
-  category:
   languages:
     .NET:
       versions:
@@ -222,10 +193,6 @@ kinesis_DeleteStream:
   services:
     kinesis: {DeleteStream}
 kinesis_PutRecord:
-  title: Put data into a &AK; stream using an &AWS; SDK
-  title_abbrev: Put data into a stream
-  synopsis: put data into a &AK; stream.
-  category:
   languages:
     Java:
       versions:
@@ -265,10 +232,6 @@ kinesis_PutRecord:
   services:
     kinesis: {PutRecord}
 kinesis_GetRecords:
-  title: Get data in batches from a &AK; stream using an &AWS; SDK
-  title_abbrev: Get data in batches from a stream
-  synopsis: get data in batches from a &AK; stream.
-  category:
   languages:
     Java:
       versions:
@@ -299,11 +262,7 @@ kinesis_GetRecords:
                 - kns.abapv1.get_records
   services:
     kinesis: {GetRecords}
-kinesis_RegisterConsumer:
-  title: Register a consumer to a &AK; stream using an &AWS; SDK
-  title_abbrev: Register a consumer
-  synopsis: register a consumer to a &AK; stream.
-  category:
+kinesis_RegisterStreamConsumer:
   languages:
     .NET:
       versions:
@@ -324,11 +283,7 @@ kinesis_RegisterConsumer:
                 - kns.abapv1.register_stream_consumer
   services:
     kinesis: {RegisterStreamConsumer}
-kinesis_TagStream:
-  title: Add tags to a &AK; stream using an &AWS; SDK
-  title_abbrev: Add tags
-  synopsis: add tags to a &AK; stream.
-  category:
+kinesis_AddTagsToStream:
   languages:
     .NET:
       versions:
