--- a/.doc_gen/metadata/sesv2_metadata.yaml
+++ b/.doc_gen/metadata/sesv2_metadata.yaml
@@ -1,9 +1,4 @@
-# zexi 0.4.0
 sesv2_CreateContactList:
-  title: Create an &SESv2; contact list using an &AWS; SDK
-  title_abbrev: Create a contact list
-  synopsis: create an &SESv2; contact list.
-  category:
   languages:
     Rust:
       versions:
@@ -34,10 +29,6 @@ sesv2_CreateContactList:
   services:
     sesv2: {CreateContactList}
 sesv2_CreateContact:
-  title: Create an &SESv2; contact in a contact list using an &AWS; SDK
-  title_abbrev: Create a contact in a contact list
-  synopsis: create an &SESv2; contact in a contact list.
-  category:
   languages:
     Rust:
       versions:
@@ -68,10 +59,6 @@ sesv2_CreateContact:
   services:
     sesv2: {CreateContact}
 sesv2_GetEmailIdentity:
-  title: Get information about an &SESv2; identity using an &AWS; SDK
-  title_abbrev: Get identity information
-  synopsis: get &SESv2; identity information.
-  category:
   languages:
     Rust:
       versions:
@@ -84,10 +71,6 @@ sesv2_GetEmailIdentity:
   services:
     sesv2: {GetEmailIdentity}
 sesv2_ListContactLists:
-  title: List the &SESv2; contact lists using an &AWS; SDK
-  title_abbrev: List the contact lists
-  synopsis: list the &SESv2; contact lists.
-  category:
   languages:
     Rust:
       versions:
@@ -100,10 +83,6 @@ sesv2_ListContactLists:
   services:
     sesv2: {ListContactLists}
 sesv2_ListContacts:
-  title: List the contacts in an &SESv2; contact list using an &AWS; SDK
-  title_abbrev: List the contacts in a contact list
-  synopsis: list the contacts in an &SESv2; contact list.
-  category:
   languages:
     Rust:
       versions:
@@ -133,11 +112,7 @@ sesv2_ListContacts:
                 - python.example_code.sesv2.ListContacts
   services:
     sesv2: {ListContacts}
-sesv2_SendEmail_Simple:
-  title: Send an &SESv2; email using an &AWS; SDK
-  title_abbrev: Send an email
-  synopsis: send an &SESv2; email.
-  category:
+sesv2_SendEmail:
   languages:
     Java:
       versions:
@@ -188,10 +163,6 @@ sesv2_SendEmail_Simple:
   services:
     sesv2: {SendEmail}
 sesv2_CreateEmailIdentity:
-  title: Create an &SESv2; email identity using an &AWS; SDK
-  title_abbrev: Create an email identity
-  synopsis: create an &SESv2; email identity.
-  category:
   languages:
     Java:
       versions:
@@ -221,11 +192,7 @@ sesv2_CreateEmailIdentity:
                 - sesv2.rust.create-email-identity
   services:
     sesv2: {CreateEmailIdentity}
-
 sesv2_CreateEmailTemplate:
-  title: Create an &SESv2; email template using an &AWS; SDK
-  title_abbrev: Create an email template
-  synopsis: create an &SESv2; email template.
   languages:
     Java:
       versions:
@@ -255,12 +222,7 @@ sesv2_CreateEmailTemplate:
                 - sesv2.rust.create-email-template
   services:
     sesv2: {CreateEmailTemplate}
-
 sesv2_DeleteContactList:
-  title: Delete an &SESv2; contact list using an &AWS; SDK
-  title_abbrev: Delete a  contact list
-  synopsis: delete an &SESv2; contact list.
-  category:
   languages:
     Java:
       versions:
@@ -290,12 +252,7 @@ sesv2_DeleteContactList:
                 - sesv2.rust.delete-contact-list
   services:
     sesv2: {DeleteContactList}
-
 sesv2_DeleteEmailIdentity:
-  title: Delete an &SESv2; email identity using an &AWS; SDK
-  title_abbrev: Delete an email identity
-  synopsis: delete an &SESv2; email identity.
-  category:
   languages:
     Java:
       versions:
@@ -325,12 +282,7 @@ sesv2_DeleteEmailIdentity:
                 - sesv2.rust.delete-email-identity
   services:
     sesv2: {DeleteEmailIdentity}
-
 sesv2_DeleteEmailTemplate:
-  title: Delete an &SESv2; email template using an &AWS; SDK
-  title_abbrev: Delete an email template
-  synopsis: delete an &SESv2; email template.
-  category:
   languages:
     Java:
       versions:
@@ -360,11 +312,10 @@ sesv2_DeleteEmailTemplate:
                 - sesv2.rust.delete-email-template
   services:
     sesv2: {DeleteEmailTemplate}
-
 sesv2_NewsletterWorkflow:
   title: A complete &SESv2; Newsletter workflow using an &AWS; SDK
   title_abbrev: Newsletter workflow
-  synopsis: "&SESv2; newsletter workflow."
+  synopsis: '&SESv2; newsletter workflow.'
   category: Scenarios
   languages:
     Java:
@@ -419,16 +370,5 @@ sesv2_NewsletterWorkflow:
                 - sesv2.rust.delete-email-identity
                 - sesv2.rust.delete-email-template
   services:
-    sesv2:
-      {
-        CreateContactList,
-        CreateContact,
-        ListContacts,
-        SendEmail.simple,
-        SendEmail.template,
-        CreateEmailIdentity,
-        CreateEmailTemplate,
-        DeleteContactList,
-        DeleteEmailIdentity,
-        DeleteEmailTemplate,
-      }
+    sesv2: {CreateContactList, CreateContact, ListContacts, SendEmail.simple, SendEmail.template, CreateEmailIdentity, CreateEmailTemplate,
+            DeleteContactList, DeleteEmailIdentity, DeleteEmailTemplate}
