--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -1201,27 +1201,26 @@ medical-imaging_Scenario_ImageSetsAndFrames:
             - description: <noloc>index.js</noloc> - Orchestrate steps.
               snippet_files:
                 - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/index.js
-            - description: <noloc>step-1.js</noloc> - Deploy resources.
+            - description: <noloc>deploy-steps.js</noloc> - Deploy resources.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-1.js
-            - description: <noloc>step-2.js</noloc> - Copy DICOM files.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/deploy-steps.js
+            - description: <noloc>dataset-steps.js</noloc> - Copy DICOM files. 
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-2.js
-            - description: <noloc>step-3.js</noloc> - Start import into datastore.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/dataset-steps.js
+            - description: <noloc>import-steps.js</noloc> - Start import into datastore.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-3.js
-            - description: <noloc>step-4.js</noloc> - Get image set IDs.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/import-steps.js
+            - description: <noloc>image-set-steps.js</noloc> - Get image set IDs.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-4.js
-            - description: <noloc>step-5.js</noloc> - Get image frame IDs.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/image-set-steps.js
+            - description: <noloc>image-frame-steps.js</noloc> - Get image frame IDs.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-5.js
-            - description: <noloc>step-6.js</noloc> - Verify image frames. The <ulink url="https://github.com/aws-samples/aws-healthimaging-samples/tree/main/pixel-data-verification">&AWS;
-                HealthImaging Pixel Data Verification</ulink> library was used for verification.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/image-frame-steps.js
+            - description: <noloc>verify-steps.js</noloc> - Verify image frames. The <ulink url="https://github.com/aws-samples/aws-healthimaging-samples/tree/main/pixel-data-verification">&AWS; HealthImaging Pixel Data Verification</ulink> library was used for verification.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-6.js
-            - description: <noloc>step-7.js</noloc> - Destroy resources.
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/verify-steps.js
+            - description: <noloc>clean-up-steps.js</noloc> - Destroy resources.
               snippet_files:
-                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-7.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/clean-up-steps.js
   services:
     medical-imaging: {StartDICOMImportJob, GetDICOMImportJob, GetImageSetMetadata, GetImageFrame, SearchImageSets, DeleteImageSet}
